unpackaged/main/default/objects/Customer_Milestone_Routing_Setting__mdt/Customer_Milestone_Routing_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Customer Milestone Routing Setting</label>
    <pluralLabel>Customer Milestone Routing Settings</pluralLabel>
</CustomObject>