unpackaged/main/default/objects/Customer_Milestone_Routing_Setting__mdt/fields/Approval_Reply_SLA__c.field-meta.xml
<CustomField>
    <fullName>Approval_Reply_SLA__c</fullName>
    <label>Approval Reply SLA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>