unpackaged/main/default/objects/Customer_Milestone_Routing_Setting__mdt/fields/Approver_Slack_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Approver_Slack_Group_ID__c</fullName>
    <label>Approver Slack Group ID</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>