unpackaged/main/default/objects/Customer_Milestone_Routing_Setting__mdt/fields/Notification_Slack_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>Notification_Slack_Channel_ID__c</fullName>
    <label>Notification Slack Channel ID</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>